2008-10-24  kitone  <kitone@gna.org>

	* src/actions/Dialoguize.cc:
	* src/actions/Italicize.cc:
	Using Glib::Regex instead of RegEx.

2008-10-24  kitone  <kitone@gna.org>

	* src/gui/ComboBoxVideo.cc:
	Using Glib::Regex instead of RegEx.

	* src/gui/DialogFileChooser.cc:
	Remove unused header RegEx.h.

2008-10-23  kitone  <kitone@gna.org>

	* src/formats/AdobeEncoreDVD.h:
	Using Glib::Regex instead of RegEx.
	Fix: multiple line reader.

	* src/formats/AdvancedSubStationAlpha.h:
	* src/formats/MPL2.h:
	* src/formats/MPsub.h:
	* src/formats/MicroDVD.h:
	* src/formats/SubRip.h:
	* src/formats/SubStationAlpha.h:
	* src/formats/SubViewer2.h:
	Using Glib::Regex instead of RegEx.

2008-10-16  kitone  <kitone@gna.org>

	* src/utility.cc:
	Fix: change async to sync spawn_command.

2008-10-13  kitone  <kitone@gna.org>

	* configure.in:
	Switching back to development version.

2008-10-13  kitone  <kitone@gna.org>

	* NEWS:
	* configure.in:
	Preparing 0.25.0 release.

2008-10-13  kitone  <kitone@gna.org>

	* src/SubtitleFormat.cc:
	* src/formats/SubtitleEditorProject.h:
	* src/formats/TimedTextAuthoringFormat1.h:
	Spelling fixes by Luboš Staněk.

2008-10-12  kitone  <kitone@gna.org>

	* src/actions/errorchecking/ErrorCheckingPlugin.cc:
	Fix: Error Checking fix with command recorder.
	Fix: active list (By Subtitles).

2008-10-08  kitone  <kitone@gna.org>

	* src/formats/MicroDVD.h:
	Restore tag conversion.

2008-10-07  kitone  <kitone@gna.org>

	* src/actions/DocumentManagement.cc:
	Comment the line set_show_not_found. (freeze the ui)

2008-10-07  kitone  <kitone@gna.org>

	* src/SubtitleView.cc:
	* src/SubtitleView.h:
	Fix column title and alignment.
	Clean code.

2008-10-07  kitone  <kitone@gna.org>

	* src/actions/DocumentManagement.cc:
	Change add_filter to set_filter. (Recent code)

2008-10-07  kitone  <kitone@gna.org>

	* src/Makefile.am:
	* src/SubtitleFormatSystem.cc:
	* src/formats/TimedText.h:
	* src/formats/TimedTextAuthoringFormat1.h: